objects/Customer_Segmentation__c.object
<CustomObject>
    <description>R5 - Custom Object to define Customer Segmentation</description>
    <fields>
        <fullName>ABB_Industry_Usage_Level1__c</fullName>
        <description>R5-Picklist for Customer segmentation</description>
        <inlineHelpText>Industry Usage Level1 classification of the Account for the selected segmentation.</inlineHelpText>
        <label>Industry Usage Level1</label>
        <picklist>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level2__c</fullName>
        <description>R5-Picklist for Customer segmentation. Dependent field of ABB Industry Usage Level1</description>
        <inlineHelpText>Industry Usage Level2 classification of the Account for the selected segmentation.</inlineHelpText>
        <label>Industry Usage Level2</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level1__c</controllingField>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level3__c</fullName>
        <description>R5-Picklist for Customer segmentation. Dependent field of Abb Industry Usage Level3</description>
        <inlineHelpText>Industry Usage Level2 classification of the Account for the selected segmentation.</inlineHelpText>
        <label>Industry Usage Level3</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level2__c</controllingField>
            <picklistValues>
                <fullName>BLD.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Lvl1_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>ABB Industry Usage Lvl1 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Lvl2_Backup__c</fullName>
        <label>ABB Industry Usage Lvl2 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Lvl3_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>ABB Industry Usage Lvl3 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSegmentationOwnerLMD__c</fullName>
        <label>AccountSegmentationOwnerLMD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccountSegmentationPriorOwnerId__c</fullName>
        <label>AccountSegmentationPriorOwnerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segmentation_Process__c</fullName>
        <formula>HYPERLINK($Label.SYSTEM_ABB_SHAREPOINT_FACE_TRAINING, $Label.SYSTEM_ACCOUNT_SEGMENTATION_PROCESS_AWARE, &quot;_blank&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Segmentation Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>R5 - Lookup to Account Standard Object</description>
        <inlineHelpText>This is the Account Customer.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Segmentations</relationshipLabel>
        <relationshipName>Customer_Segmentations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Line_BU_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>BU Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_BU__c</fullName>
        <description>R5-Picklist for Business line Bu.</description>
        <label>BU</label>
        <picklist>
            <controllingField>DIV__c</controllingField>
            <picklistValues>
                <fullName>EPCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Partner_Segment_Level1__c</fullName>
        <description>This is consistant with the Account and is not changeable in Segmentation.</description>
        <inlineHelpText>This is consistant with the Account and is not changeable in Segmentation.</inlineHelpText>
        <label>Business Partner Segment Level1</label>
        <picklist>
            <picklistValues>
                <fullName>A05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A83</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Partner_Segment_Level2__c</fullName>
        <description>R7B – Account Segmentation Enhancements</description>
        <inlineHelpText>This is consistant with the Account and is not changeable in Segmentation.</inlineHelpText>
        <label>Business Partner Segment Level2</label>
        <picklist>
            <controllingField>Business_Partner_Segment_Level1__c</controllingField>
            <picklistValues>
                <fullName>00.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Partner_Segment_Lvl1_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Business Partner Segment Lvl1 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Partner_Segment_Lvl2_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Business Partner Segment Lvl2 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segmentation_10__c</fullName>
        <description>BR 4707 - Business Segmentation 10</description>
        <inlineHelpText>Optional open text for additional local country Account segmentation partitioning</inlineHelpText>
        <label>Segmentation 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segmentation_11__c</fullName>
        <description>BR 4707 - Business Segmentation 11</description>
        <inlineHelpText>Optional open text for additional local country Account segmentation partitioning</inlineHelpText>
        <label>Segmentation 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segmentation_12__c</fullName>
        <description>BR 4707 - Business Segmentation 12</description>
        <inlineHelpText>Optional open text for additional local country Account segmentation partitioning</inlineHelpText>
        <label>Segmentation 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Sync_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R7B – Account Segmentation Enhancements</description>
        <label>Bypass Sync Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Channel Class Level1 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>R5-picklist field for Customer segmentation</description>
        <inlineHelpText>Channel Class Level1 classification of the Account for the selected segmentation.</inlineHelpText>
        <label>Channel Class Level1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Channel Class Level2 Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>R5-picklist for Customer segmentation</description>
        <inlineHelpText>Channel Class Level2 classification of the Account for the selected segmentation.</inlineHelpText>
        <label>Channel Class Level2</label>
        <picklist>
            <controllingField>Channel_Class_Level1__c</controllingField>
            <picklistValues>
                <fullName>ABBPRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABBSYI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R5 - Comments</description>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5 Country</description>
        <formula>Text(Account__r.Primary_Address_Country__c)</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sales_Segmentation_Year_1__c</fullName>
        <description>R5 - Customer Sales Segmentation Year +1</description>
        <inlineHelpText>A-Top Accounts(roughly5% of active ones)with high potential
B-Medium/Large Accounts(roughly10%)with important potential
C-Standard Accounts(roughly70%)handled directly by Account Manager
D-Smaller Accounts(roughly10%)mainly addressed to ChannelPartners</inlineHelpText>
        <label>Account Sales Segmentation Year +1</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sales_Segmentation_Year_2__c</fullName>
        <description>R5 - Customer Sales Segmentation Year +2</description>
        <inlineHelpText>A-Top Accounts(roughly5% of active ones)with high potential
B-Medium/Large Accounts(roughly10%)with important potential
C-Standard Accounts(roughly70%)handled directly by Account Manager
D-Smaller Accounts(roughly10%)mainly addressed to ChannelPartners</inlineHelpText>
        <label>Account Sales Segmentation Year +2</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sales_Segmentation_Year_3__c</fullName>
        <description>R5- Customer Sales Segmentation Year +3</description>
        <inlineHelpText>A-Top Accounts(roughly5% of active ones)with high potential
B-Medium/Large Accounts(roughly10%)with important potential
C-Standard Accounts(roughly70%)handled directly by Account Manager
D-Smaller Accounts(roughly10%)mainly addressed to ChannelPartners</inlineHelpText>
        <label>Account Sales Segmentation Year +3</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sales_Segmentation__c</fullName>
        <description>R5 - Picklist Field to choose Segment</description>
        <inlineHelpText>A-Top Accounts(roughly5% of active ones)with high potential
B-Medium/Large Accounts(roughly10%)with important potential
C-Standard Accounts(roughly70%)handled directly by Account Manager
D-Smaller Accounts(roughly10%)mainly addressed to ChannelPartners</inlineHelpText>
        <label>Account Sales Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <description>R5 Division</description>
        <inlineHelpText>Division</inlineHelpText>
        <label>DIV</label>
        <picklist>
            <controllingField>Segment_Level__c</controllingField>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_required__c</fullName>
        <label>Segmentation 3</label>
        <picklist>
            <controllingField>DIV__c</controllingField>
            <picklistValues>
                <fullName>High Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <description>R5 - Visual Flag Indicator</description>
        <formula>IF( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Preferred Supplier&quot;), IMAGE(&quot;/resource/GreenFlag&quot;, &quot;Green&quot;,30,30), IF( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Supplier amongst others&quot;), IMAGE(&quot;/resource/YellowFlag&quot;, &quot;Yellow&quot;,30,30), IF( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Approved/Weak supplier&quot;),  IMAGE(&quot;/resource/RedFlag&quot;, &quot;Red&quot;,30,30), 
IF( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Not applicable&quot;),IMAGE(&quot;/resource/BlackFlag&quot;, &quot;Black&quot;,30,30), IF ( ISPICKVAL( PIE_Customer_Marketing_Segmentation__c, &quot;Not Approved&quot;), 
IMAGE(&quot;/resource/GreyFlag1&quot;, &quot;Grey&quot;,30,30), &quot;&quot; )))))</formula>
        <inlineHelpText>Visiual representation of ABB position at the Account.</inlineHelpText>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Expectation__c</fullName>
        <description>R7B - Account Segmentation Enhancements</description>
        <inlineHelpText>Optional picklist for additional Division or BU Account segmentation partitioning</inlineHelpText>
        <label>Segmentation 2</label>
        <picklist>
            <controllingField>DIV__c</controllingField>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decreasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increasing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>